Update pizza.html with recipe info, image, and back link

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,5 +6,28 @@
     </head>
     <body>
         <h1>Pizza Recipe</h1>
+        <img src="../images/pizza.jpg" alt="A sliced pizza with various toppings on a wooden table">
+        <h2>Description</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam deserunt vel eius natus dolore tenetur fuga in provident, quos quo doloribus ab eos ratione molestiae, animi, praesentium aperiam vitae a.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, non?</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3/4 cup water</li>
+            <li>1 teaspoon active-dry yeast</li>
+            <li>11 ounces all-purpose flour</li>
+            <li>1 teaspoon salt</li>
+            <li>1 jar pizza sauce</li>
+            <li>2 cups Mozzarella cheese</li>
+            <li>Your favorite toppings</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi.</li>
+        </ol>
+        <a href="../index.html">Back to home</a>
     </body>
 </html>
